# snake-ai

./: LICENSE  README.md  pyproject.toml
game/: constants.py  main.py  snake_game.py
tests/: test_utils_numbers.py
utils/: numbers.py
utl/: round.py
